style radio buttons, fix card flip alignment issue

--- a/results/results.css
+++ b/results/results.css
@@ -27,7 +27,7 @@ td{
 #button-wrapper{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .clear-button {
