--- a/styles/style.css
+++ b/styles/style.css
@@ -38,11 +38,6 @@ header {
     justify-content: center;
 }
 
-img{
-    margin: 10px;
-    border-radius: 5px;
-}
-
 h1 {
     font-family: 'Chonburi', cursive;
     color: rgb(185, 178, 185);
@@ -99,14 +94,4 @@ button:focus {
     color: black;
     border: black 3px solid;
     border-radius: 5px;
-}
-
-input {
-    background-color: rgb(170, 170, 172);
-    color:  #1d132c;
-    font-weight: bolder;
-}
-
-input.name{
-    height: 30px;
 }
